Render entire site
Specifically: boostrap 3 menu doesn't shine on phones :(
In general: all we need is better templates. The rest works :)

--- a/html/post-amir-hertzberg.html
+++ b/html/post-amir-hertzberg.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - פרופ’ אמיר הרצברג</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -107,7 +106,7 @@
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">מחאת האקדמיה<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -115,7 +114,7 @@
 
                           <li><a href="post-eli-biham.html">פרופ’ אלי ביהם</a></li>
 
-                          <li><a href="post-amir-hertzberg.html">פרופ’ אמיר הרצברג</a></li>
+                          <li class="active"><a href="post-amir-hertzberg.html">פרופ’ אמיר הרצברג</a></li>
 
                           <li><a href="post-jerome-bordon.html">פרופ’ ג’רום בורדון</a></li>
 
@@ -145,30 +144,47 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>פרופ’ אמיר הרצברג</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">פרופ&#8217; הרצברג, מחותמי <a href="http://no2bio.org/letters-to-knesset/" target="_blank">מכתב המדענים</a>, הוא ראש קבוצה שעוסקת במחקרים בנושאי אבטחה, תקשורת והגנה מפני פריצות במחלקה למדעי המחשב באוניברסיטת בר אילן,</p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/AhOFFy2ei2c?rel=0&amp;cc_lang_pref=he" height="315" width="560" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl">ראיון עם פרופ&#8217; הרצברג בנושא המאגר הביומטרי. מרץ 2013</p>
+<p dir="rtl"><strong>לא לעתים קרובות רואים התגייסות כה גורפת של אנשי אקדמיה נגד יוזמה פוליטית בעיקרה. למה לדעתך זה קורה דווקא בנושא המאגר?</strong></p>
+<p dir="rtl">ההתנגדות כאן היא לא על רקע פוליטי קלאסי, אלא על רקע אזרחי טהור, ואפילו יש לו היבטים טכנולוגיים וארוכי טווח שיש יסוד לחשוש שהמחוקקים עלולים לא להיות מודעים אליהם. לכן יש הצדקה להתבטאות אקדמית שבאה מתוך רצון להבטיח שהחלטות מתקבלות מתוך מודעות למשמעויות של ההיבטים המקצועיים, בניגוד להתבטאויות בנושאים ששנויים במחלוקת פוליטית.</p>
+<p dir="rtl"><strong>למה צריך מאגר ביומטרי? האם מאגר כזה אכן יפחית את הפשיעה?</strong></p>
+<p dir="rtl">צריך כאן להבדיל בין אמצעי זיהוי ביומטרי כדוגמת תעודת זיהוי חכמה, שהוא חשוב ביותר, לבין מאגר, שהשימושים הרצויים בו מצומצמים יחסית. מתי מאגר יכול לעזור (מעבר לתעודת זיהוי ביומטרית)? כאשר מזהים אדם שלא בשיתוף פעולה שלו, כלומר אדם שנפטר או נפצע קשה, אדם שמנסה להסתיר את זהותו,  ובפרט זיהוי אדם מרחוק או לפי עקבות כדוגמת טביעת אצבע.</p>
+<p dir="rtl"> קשה לי להאמין שלמאגר תהיה השפעה של ממש על הפחתת הפשיעה. נתונים ביומטריים של פושעים (ואפילו חשודים) יש בידי המשטרה בין כה וכה. מאגר של כלל האוכלוסיה, אפילו אם יהיה זמין מאוד למשטרה (דבר שמשמעותו פגיעה קשה בפרטיות), לא יוסיף הרבה.</p>
+<p dir="rtl"><strong>מה יקרה אם/כאשר המאגר ידלוף?</strong></p>
+<p dir="rtl">דליפת המאגר תאפשר זיהוי מרוחק של אנשים, ללא ידיעתם, לצרכים מסחריים וכן לצרכי פשיעה וטרור, בפרט זיהוי אזרחים ישראלים שנוסעים בעולם.</p>
+<p dir="rtl"><strong>באילו דרכים המאגר עלול לדלוף?</strong></p>
+<p dir="rtl">תתכן דליפה של המאגר כולו או של רשומות ספציפיות שמתקבלות מחיפושים. הדליפה תתכן ע&#8221;י אדם מורשה, או ע&#8221;י פריצה למערכת המאגר או למערכות מהן מבוצעות שאילתות למאגר. במצב מערכות האבטחה כיום, תמים לחשוב שהמערכות האלו יהיו חסינות לפריצה, בייחוד כאשר יש משמעות כלכלית מהותית לפריצה.</p>
+<p dir="rtl"><strong>אם אין לי מה להסתיר, האם אני צריך לחשוש ממאגר ביומטרי?</strong></p>
+<p dir="rtl">כן. ראשית, מחשיפה לגורמי טרור ופשע, עלול להפגע כל אזרח. שנית, ההשלכות של יכולת זיהוי הן קשות לחיזוי, ומידע ביומטרי מלווה ומזהה אדם במשך שנים רבות. גם אם כיום &#8220;אין לך מה להסתיר&#8221; יתכן שבעתיד יווצרו מצבים שבעטיים תרצה להימנע מזיהוייך.</p>
+<p dir="rtl"><strong>מהו המעשה האחראי לעשות, אישית ולאומית, אם משרד הפנים יבקש ממך נתונים ביומטריים?</strong></p>
+<p dir="rtl">אני ממליץ לאזרחים להמנע מלספק נתונים ביומטריים, לפחות כל עוד זה חוקי.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
