--- a/html/post-cardboard-safe.html
+++ b/html/post-cardboard-safe.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - משל כספת הקרטון</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -55,7 +54,7 @@
                           <li><a href="post-biometric-card.html">מהי תעודת זהות ביומטרית?</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לדעת<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -75,7 +74,7 @@
 
                           <li><a href="post-other-countries.html">מה המצב במדינות אחרות?</a></li>
 
-                          <li><a href="post-cardboard-safe.html">משל כספת הקרטון</a></li>
+                          <li class="active"><a href="post-cardboard-safe.html">משל כספת הקרטון</a></li>
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
@@ -145,30 +144,35 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>משל כספת הקרטון</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">אתה רוצה שלא יפרצו לך לבית, ומשרד הפנים/המשטרה מציעים את הפתרון הבא: &#8220;כל האזרחים! תנו לנו עותק של מפתח הבית שלכם ונשמור אותו בכספת הקרטון המפורסמת של משרד הפנים!&#8221;.</p>
+<p dir="rtl">מה קיבלנו? יש עותק של מפתח הבית שלך שעכשיו אין לך שליטה עליו, הוא נשמר במקום שלא נשמע אמין, הבית שלך לא ממוגן טוב יותר מבעבר, כספת הקרטון של המדינה מחזיקה עכשיו במרוכז את מפתחות כל האזרחים הישרים אבל לא את אלו של הפושעים, והפושעים תמיד יכולים לנסות לקרוע את הקרטון ולברוח עם כל המפתחות.</p>
+<p dir="rtl">מאגר ביומטרי זה אותו דבר, רק שמפתחות אפשר להחליף ואצבעות לא</p>
+<p dir="rtl" style="text-align: right;">Photo: (<a href="http://creativecommons.org/licenses/by-nc-sa/2.0/" target="_blank">cc</a>) <a href="https://secure.flickr.com/photos/charleylhasa/3860130795/" target="_blank">Charley Lhasa</a></p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
