--- a/html/post-dont-give-the-finger.html
+++ b/html/post-dont-give-the-finger.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - אל תתנו להם אצבע!</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -82,13 +81,13 @@
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לעשות<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
                           <li><a href="post-you-can-influence.html">אתם יכולים להשפיע</a></li>
 
-                          <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
+                          <li class="active"><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
                           <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
 
@@ -145,30 +144,35 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>אל תתנו להם אצבע!</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">בימים אלה מתחיל משרד הפנים לאסוף טביעות אצבעות וצילומי פנים של אזרחי ישראל, במטרה להשתמש בהם לניסוי מסוכן שאין ממנו דרך חזרה. למרות אזהרות רבות של מומחי אבטחת מידע ולמרות גל הדליפות של מאגרי מידע מכל הסוגים, ממשלת ישראל בוחרת להתעלם מהסכנות הטמונות בהקמת מאגר ביומטרי ולרמוס ברגל גסה את הזכות שלנו לפרטיות.</p>
+<p dir="rtl">כדי לשכנע אתכם למסור את נתוניכם הביומטריים, משרד הפנים מנסה למכור לכם &#8220;תעודה חכמה&#8221; וליצור את הרושם שיש צורך במאגר ביומטרי כדי להנפיק תעודות חכמות לאזרחי ישראל. זהו שקר גס. אפשר וצריך לעבור לתעודות זהות חכמות, אבל שמירתן במאגר שדליפתו היא רק עניין של זמן היא צעד טיפשי ומסוכן. זו לא תעודה חכמה, זאת תעודת עניות.</p>
+<p dir="rtl">אל תטעו: הנתונים שתמסרו במהלך הפיילוט יישמרו במאגר ואתם תוחתמו על טופס שמאשר לגופים רבים (המשטרה, המשטרה הצבאית, רשויות הבטחון) לגשת אליהם. לא תוכלו להתחרט ולבקש למחוק אותם.</p>
+<p dir="rtl">אל תתנדבו למסור את הנתונים הביומטריים שלכם לניסוי המסוכן הזה! פקידי משרד הפנים ינסו לשכנע אתכם בדרכים שונות, אבל החוק לא מחייב אתכם להשתתף. אם אתם חייבים להנפיק תעודת זהות חדשה בתקופת הפיילוט, התעקשו שהיא תהיה מהסוג הישן. הסירוב שלכם יגרום לממשלה לשקול את צעדיה, ובהזדמנות זאת אולי גם יחסוך סכומי עתק שהפרויקט המסוכן הזה יעלה לכולנו.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
