--- a/html/post-eli-biham.html
+++ b/html/post-eli-biham.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - פרופ’ אלי ביהם</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -107,13 +106,13 @@
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">מחאת האקדמיה<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
                           <li><a href="post-letters-to-knesset.html">מכתבי המדענים והאקדמאים</a></li>
 
-                          <li><a href="post-eli-biham.html">פרופ’ אלי ביהם</a></li>
+                          <li class="active"><a href="post-eli-biham.html">פרופ’ אלי ביהם</a></li>
 
                           <li><a href="post-amir-hertzberg.html">פרופ’ אמיר הרצברג</a></li>
 
@@ -145,30 +144,41 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>פרופ’ אלי ביהם</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">פרופ&#8217; אלי ביהם, דיקן הפקולטה למדעי המחשב בטכניון ומומחה בעל שם עולמי להצפנה ואבטחת מידע, יזם את &#8220;<a href="http://no2bio.org/letters-to-knesset/" target="_blank">מכתב המדענים</a>&#8221; לכנסת ונחשב לאחד המתנגדים הבולטים ביותר למאגר הביומטרי.</p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/V2KinheAa84?rel=0" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl"><strong>מתוך הווידאו:</strong></p>
+<p dir="rtl">&#8220;מאגר המידע הזה הוא קטסטרופה. אפילו אם הייתי מסכים שבתעודה יהיו הנתונים הביומטריים, מאגר הם לא צריכים. אם המאגר הזה דולף, והחוק מרשה לו לדלוף, בניגוד לכל מה שתשמע מאחרים, כל אחד יכול לעקוב אחרי, לבדוק דברים וכו&#8217;, בצורה שעד היום לא היתה אפשרית”.</p>
+<p dir="rtl"><strong>פרופ&#8217; ביהם על המאגר הביומטרי:</strong></p>
+<p dir="rtl"><a href=" http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">ראיון ל&#8221;הארץ&#8221;</a>: “גרמניה החליטה לא לעשות מאגר ביומטרי בגלל ההיסטוריה הגרמנית. הולנד החליטה לא לעשות מאגר ביומטרי בטיעון המפורש שבזמנו אספו יהודים לפי תעודות זהות ועכשיו הטכנולוגיה של טביעות אצבע יותר טובה. אנחנו היינו בראש המדינות שהטיפו לאחרים לא לאסוף מידע מיותר על אזרחים. מדינות אחרות פועלות בדיוק ההיפך ממדינת ישראל בגלל ההיסטוריה. אני לא מבין איך מישהו מעז לעשות את זה אצלנו”.</p>
+<div id="page-left">
+<p dir="rtl"><a href="http://www.ynet.co.il/articles/0,7340,L-3754468,00.html" target="_blank">כתבה ב-Ynet</a>: &#8220;אין חובה בביומטריה&#8230; לוּ תעודות זהות חכמות (ללא ביומטריה) היו מיושמות כבר לפני עשור, בעיית זיופי תעודות הזהות לא הייתה קיימת עוד&#8221;.</p>
+<p dir="rtl"><a href="http://acheret.co.il/?cmd=articles.528&amp;act=read&amp;id=2722" target="_blank">מאמר ב&#8221;ארץ אחרת&#8221;:</a> אל תיתנו את האצבע למאגר.</p>
+</div>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
