--- a/html/post-forgery-statistics.html
+++ b/html/post-forgery-statistics.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - מה היקף תופעת הזיוף כיום?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -44,7 +43,7 @@
 
                           <li><a href="post-what-can-be-done.html">מה אנחנו יכולים לעשות?</a></li>
 
-                          <li><a href="post-forgery-statistics.html">מה היקף תופעת הזיוף כיום?</a></li>
+                          <li class="active"><a href="post-forgery-statistics.html">מה היקף תופעת הזיוף כיום?</a></li>
 
                           <li><a href="post-other-countries.html">מה המצב במדינות אחרות?</a></li>
 
@@ -145,30 +144,42 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>מה היקף תופעת הזיוף כיום?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">לא ידוע. במשרד הפנים אין נתונים בנוגע לכמה תעודות מזוייפות קיימות כיום בישראל. למרות העדר המידע, &#8220;נתון&#8221; שכזה הובא פעמים רבות (<a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=36m26s" target="_blank">ובלהט</a>) כדי להצדיק לכאורה את הקמת המאגר: <em>&#8220;יש כיום 350,000 תעודות זהות מזוייפות בישראל&#8221;.</em></p>
+<p dir="rtl">גם אם נתון זה היה נכון, תעודת זהות חכמה <strong>בלי מאגר</strong> <a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=48m40s" target="_blank">היתה פותרת את הבעיה בכ-99% המקרים</a> (ואת האחוז הנוסף בו פקיד עשוי להנפיק תעודה מזוייפת עקב הונאה/שוחד/סחיטה/וכו&#8217; עדיף היה לפתור באמצעות <strong>עבודת</strong> בילוש, ולא על ידי הפיכתנו ל<a href="http://no2bio.org/the-problem/" target="_blank">מדינת בילוש</a> כ&#8221;אמצעי יעול&#8221; ש&#8221;יחסוך&#8221; עבודה כזו).</p>
+<p dir="rtl">למרות הכל &#8211; מופרכות הנתון הזה <strong>מעידה על רמת הרצינות של קברניטי המאגר</strong>, לכן חשוב לראות מה אומר על הנושא <a href="http://is.gd/mevaker2010tz" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>:</p>
+<p dir="rtl">עמוד 1181</p>
+<blockquote>
+<p dir="rtl">במכתב ששלח המשנה ליועץ המשפטי לממשלה (ייעוץ) ביולי 2008 אל מנכ&#8221;ל המשרד דאז, בנושא תזכיר החוק, ציין שלמרות הבקשות שהפנה למשרד ולמשטרת ישראל, טרם קיבל את המידע המבוקש בדבר &#8220;היקף תופעת &#8216;גניבת הזהות&#8217; בישראל, שהיא אחד הבסיסים החשובים לצורך בהקמתו של מאגר ביומטרי&#8221;. עוד ציין שדברי ההסבר להצעת החוק אינם כוללים נתונים בעניין מספר האנשים שהתלוננו על כך שנעשה שימוש בזהותם בלי ידיעתם, ועל מספר האנשים שהשתמשו בזהות גנובה ונתפסו. בתגובה שלח מנכ&#8221;ל המשרד למשנה ליועץ המשפטי לממשלה (ייעוץ) מכתב ובו עסק בנושאים שהעלה. הוא ציין כי אין במשרד נתונים בעניין היקף תופעת &#8220;גנבת הזהות&#8221; וכי המשטרה הודיעה שתספק נתונים בנושא, אך טרם עשתה כן.</p>
+</blockquote>
+<p dir="rtl">עמוד 1182</p>
+<blockquote>
+<p dir="rtl">משרד מבקר המדינה העיר למשרד הפנים כי אין בידיו נתונים כמותיים, ולו חלקיים, על הבעיות שהעלה כנימוק להכללת אמצעי זיהוי ביומטריים בתעודות הזיהוי של כלל האוכלוסייה &#8211; זיוף מסמכי זיהוי ותיעוד כפול &#8211; על שכיחותן ועל מאפייניהן. בהיעדר נתונים כאלה אין בידיו תשתית עובדתית נאותה לביסוס החלטותיו בנושא זה.</p>
+</blockquote>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
