--- a/html/post-jerome-bordon.html
+++ b/html/post-jerome-bordon.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - פרופ’ ג’רום בורדון</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -107,7 +106,7 @@
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">מחאת האקדמיה<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -117,7 +116,7 @@
 
                           <li><a href="post-amir-hertzberg.html">פרופ’ אמיר הרצברג</a></li>
 
-                          <li><a href="post-jerome-bordon.html">פרופ’ ג’רום בורדון</a></li>
+                          <li class="active"><a href="post-jerome-bordon.html">פרופ’ ג’רום בורדון</a></li>
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
@@ -145,30 +144,38 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>פרופ’ ג’רום בורדון</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">פרופ&#8217; ג&#8217;רום בורדון, מחותמי מכתב האקדמאים, הוא ראש החוג לתקשורת באוניברסיטת תל אביב.</p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/nyjjVRrAPqM?rel=0&amp;cc_lang_pref=he" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl">מתוך הווידאו:</p>
+<p dir="rtl">&#8220;מאגר ביומטרי נותן למדינה המון כוח לפקח על האזרחים, כל האזרחים, כולל אזרחים חפים מפשע, בזמן שאין שום צורך בזה&#8230; אנשי אקדמיה מכל מיני תחומים &#8211; משפטים, מיחשוב, מדעי המדינה, תקשורת &#8211; התגייסו נגד המאגר הביומטרי בגלל שזה לא נושא של ימין או שמאל, הוא לא משהו שקשור לעמדה ספציפית לגבי הדמוקרטיה. הוא קשור למהות הדמוקרטיה&#8230; אזרח יכול להתנגד לזה בכל מיני צורות: קודם כל לסרב לשתף פעולה עם הדבר הזה, לא לתת נתונים ביומטריים שמבקשים ממנו בכל מיני הקשרים אלא אם זה לפי החוק והוא חייב, אבל אל תעשו את זה, אל תתנו נתונים ביומטריים”.</p>
+<style type="text/css"><!--
+P { margin-bottom: 0.08in; }A:link {  }
+--></style>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
