--- a/html/post-mevaker.html
+++ b/html/post-mevaker.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - דו”ח מבקר המדינה 2010</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -55,7 +54,7 @@
                           <li><a href="post-biometric-card.html">מהי תעודת זהות ביומטרית?</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לדעת<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -65,7 +64,7 @@
 
                           <li><a href="post-pilot-knesset-protocol.html">איך לא עושים פיילוט</a></li>
 
-                          <li><a href="post-mevaker.html">דו”ח מבקר המדינה 2010</a></li>
+                          <li class="active"><a href="post-mevaker.html">דו”ח מבקר המדינה 2010</a></li>
 
                           <li><a href="post-bloggers.html">דעות ברשת</a></li>
 
@@ -145,30 +144,45 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>דו”ח מבקר המדינה 2010</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <h4 dir="rtl"><a href="http://www.mevaker.gov.il/serve/contentTree.asp?bookid=595&amp;id=193&amp;contentid=11664&amp;parentcid=undefined&amp;bctype=11663&amp;sw=1280&amp;hw=730#thisTr64" target="_blank">המסמך באתר מבקר המדינה</a></h4>
+<p dir="rtl"><a href="http://technation.themarker.com/internet-technologies/1.1768804" target="_blank">דה מארקר</a>: דו&#8221;ח מבקר המדינה שמתפרסם היום, מותח ביקורת חריפה על התנהלות משרד הפנים בקידום תעודות הזהות החכמות, ומצביע על שורת מחדלים בהליך קבלת ההחלטות וניהול התקציבים בנושא</p>
+<p dir="rtl"><strong><a href="http://www.ynet.co.il/articles/0,7340,L-4069810,00.html" target="_blank">ווינט</a></strong>: <span><span>משרד המבקר ביקש, לפי הדו&#8221;ח, &#8220;לעיין במסמכים המתעדים את תהליך קבלת ההחלטות שנעשה במשרד הפנים בדבר הכללת אמצעי זיהוי ביומטריים בתעודות הזהות&#8221;, אולם כשפנה למנכ&#8221;ל משרד הפנים שהתחלף מאז, זה ענה כי אין מסמכים שמתעדים את התהליך&#8221;.</span></span></p>
+<p dir="rtl"><strong>ציטוטים נבחרים מתוך הדו&#8221;ח</strong><strong>:</strong></p>
+<p dir="rtl"><strong>עמ&#8217; 1182</strong></p>
+<p><strong>משרד מבקר המדינה העיר למשרד הפנים כי אין בידיו נתונים כמותיים, ולו חלקיים, על הבעיות שהעלה כנימוק להכללת אמצעי זהוי ביומטריים בתעודות הזיהוי של כלל האוכלוסייה &#8211; זיוף מסמכי זיהוי ותיעוד כפול על שכיחותן ועל מאפייניהן. בהיעדר נתונים כאלה אין בידיו תשתית עובדתית נאותה לביסוס החלטותיו בנושא זה.</strong></p>
+<p dir="rtl">מתשובת משטרת ישראל למשרד מבקר המדינה בנובמבר 2010 עולה כי אין בידיה נתונים על עבירות הזיוף של תעודות הזהות  אלא רק על עבירות זיוף באופן כללי.</p>
+<p><strong>עמ&#8217; 1180</strong><br />
+<br style="color: #3333ff;" /><strong>לדעת משרד מבקר המדינה היעדרם של מסמכי מפתח  בלשכת מנכ&#8221;ל משרד הפנים הנוכחי על אודות הפרויקט, על מטרותיו, על ההחלטות שהתקבלו בעניינו ועל אבני הדרך שנקבעו ליישומו, אף על פי שהפרויקט נמצא בעיצומו, שחשיבותו הלאומית רבה ושעלויותיו גבוהות, פוגעות ברציפות השלטונית. </strong></p>
+<p dir="rtl"><strong>זאת ועוד, משרד מבקר המדינה מעיר למשרד הפנים כי בהיעדר מסמכים על תהליך קבלת ההחלטות אי אפשר לדעת מהם השיקולים והנתונים שעליהם התבססו השר והמנכ&#8221;ל בהחלטותיהם. מן הראוי היה שמשרד הפנים יתעד את הדיונים שבמהלכם גיבש את מדיניותו וקיבל החלטות בעניין כה חשוב, וכי יתעד את מסמכיו באופן שיטתי ועל פי הכללים שנקבעו בחוק, בהנחיות היועץ המשפטי לממשלה ובהוראות נגד המדינה, כדי שישמשו זיכרון ארגוני שיהיה אפשר לעיין בהם.</strong></p>
+<p dir="rtl"><strong>עמ&#8217; 1181</strong></p>
+<p>במכתב ששלח המשנה ליועץ המשפטי לממשלה (ייעוץ) ביולי 2008 אל מנכ&#8221;ל המשרד דאז, בנושא תזכיר החוק, ציין שלמרות הבקשות שהפנה למשרד ולמשטרת ישראל, טרם קיבל את המידע המבוקש בדבר &#8220;היקף תופעת &#8216;גניבת הזהות&#8217; בישראל, שהיא אחד הבסיסים החשובים בהקמתו של מאגר ביומטרי&#8221;. עוד ציין שדברי ההסבר להצעת החוק אינם כוללים נתונים בעניין מספר האנשים שהתלוננו, על כך שנעשה שימוש בזהותם בלי ידיעתם, ועל מספר האנשים שהשתמשו בזהות גנובה ונתפסו.<br />
+בתגובה שלח מנכל המשרד למשנה ליועץ המשפטי לממשלה (ייעוץ) מכתב ובו עסק בנושאים שהעלה, הוא ציין כי אין במשרד נתונים בעניין היקף תופעת &#8220;גניבת הזהות&#8221; וכי המשטרה הודיעה שתספק נתונים, אך טרם עשתה כן.</p>
+<p>בעניין המידע שבידי המשטרה על עבירות הונאה ראו דוח 52ב עמ, 493-508. בדוח נכתב כי למשטרה היה חסר מידע על עבירות ההונאה וכי בכל הקשור למסמכים מזויפים &#8211; דרכונים, תעודות זהות, אשרות ועוד &#8211; הטיפול המשטרתי לקוי בחסר.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
