--- a/html/post-pilot-knesset-protocol.html
+++ b/html/post-pilot-knesset-protocol.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - איך לא עושים פיילוט</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -55,7 +54,7 @@
                           <li><a href="post-biometric-card.html">מהי תעודת זהות ביומטרית?</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לדעת<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -63,7 +62,7 @@
 
                           <li><a href="post-relevant-big-brother.html">Большой брат смотрит на тебя</a></li>
 
-                          <li><a href="post-pilot-knesset-protocol.html">איך לא עושים פיילוט</a></li>
+                          <li class="active"><a href="post-pilot-knesset-protocol.html">איך לא עושים פיילוט</a></li>
 
                           <li><a href="post-mevaker.html">דו”ח מבקר המדינה 2010</a></li>
 
@@ -145,30 +144,34 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>איך לא עושים פיילוט</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">אמר אוסקר וויילד: מי שרוצה לשמור על החוק או לאכול נקניקיות, עדיף שלא ידע איך הכינו אותם. ומי שרוצה להשתתף בפיילוט?</p>
+<p dir="rtl">אתם מוזמנים לקרוא את <a href="http://www.scribd.com/doc/59522947/2011-06-02" target="_blank">פרוטוקול ועדת הפנים מיום 2/6/2011</a>  ולצחוק או לבכות. סיכום ופרשנות מצחיקים/עצובים עוד יותר אפשר למצוא בכתבה <a href="http://www.digitalwhisper.co.il/files/Zines/0x17/DW23-2-Pilot.pdf" target="_blank">איך לא עושים פיילוט</a> של עו&#8221;ד יונתן קלינגר שהופיעה <a href="http://www.digitalwhisper.co.il/issue23" target="_blank">במגזין Digital Whisper</a>.<br />
+<iframe id="doc_27818" src="http://www.scribd.com/embeds/59522947/content?start_page=1&amp;view_mode=slideshow&amp;access_key=key-1snzexsokonu60ybv3xt" height="600" width="100%" frameborder="0" scrolling="no" data-auto-height="false" data-aspect-ratio="0.706697459584296"></iframe></p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
