--- a/html/post-the-problem.html
+++ b/html/post-the-problem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - צרו קשר</title>
+    <title>m.No2Bio - מה הבעיה?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -25,11 +25,11 @@
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
-                          <li><a href="post-the-problem.html">מה הבעיה?</a></li>
+                          <li class="active"><a href="post-the-problem.html">מה הבעיה?</a></li>
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
@@ -132,7 +132,7 @@
                           <li><a href="bloggers.html">דעות ברשת</a></li>
                       </ul>
                   </li>
-                  <li class="active"><a href="contact.html">צרו קשר</a></li>
+                  <li><a href="contact.html">צרו קשר</a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
               <li><a target="_blank" href="https://twitter.com/no2bio">טוויטר</a></li>
@@ -145,7 +145,40 @@
 
       <!-- Begin page content -->
       <div class="container">
-        <p align="center"><iframe style="width:100%" width="300" height="9999" src="http://kesher.no2bio.org" frameborder="0"></iframe></p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>מה הבעיה?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">תעודות הזהות שלנו מורכבות מפלסטיק, נייר ותמונה. כבר בשנות ה-90 של המאה הקודמת היה ברור שעם ההתפתחות הטכנולוגית, נוצרות (והולכות ומחריפות) שתי בעיות:</p>
+<ol>
+<li dir="rtl">בעיה של הממשל: קל לזייף תעודות</li>
+<li dir="rtl">בעיה של האזרחים: קל (לממשלה, לממשלות אחרות, לגורמים מסחריים, לעבריינים, ולטרוריסטים) לבלוש עליהם באמצעות הצלבת נתונים.</li>
+</ol>
+<h3 dir="rtl">איך אפשר לפתור את הבעיות האלה?</h3>
+<h4 dir="rtl">בעיית הזיוף</h4>
+<p dir="rtl">כבר בסוף המאה הקודמת היתה אפשרות לעבור לתעודות זהות חכמות שיש בהן שבב דיגיטלי, המונעות זיופים ומאפשרות ביטול במקרה של אובדן או גניבה. ברגע שאזרח מדווח שהתעודה החכמה שלו אבדה, היא מבוטלת אוטומטית, ולכן אין טעם לגנוב תעודות כאלה, ואכן אז יצא המכרז הראשון לתעודה חכמה. אם המהלך הזה לא היה מוכשל שוב ושוב על ידי גורמים שונים (ראו <a href="http://no2bio.org/mevaker/" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>), הבעיה כבר היתה נפתרת.</p>
+<p dir="rtl">ביומטריה (ללא מאגר) היא טכנולוגיה שהתפתחה מאוחר יותר, ויכולה להגן על הממשל מפני תחמנויות של האזרח. אדם לא יוכל, למשל, להצביע בשם אביו החולה (אפילו לא בהסכמתו).</p>
+<p dir="rtl">הנתונים הביומטריים של האזרח נשמרים על התעודה שלו בלבד (אלא אם כן היתה הדלפה פלילית בזמן הנפקת התעודה או בעמדות הזיהוי), ומשמשים כ&#8221;נצרה&#8221; שמונעת שימוש בתעודה על ידי אדם אחר. עמדת הזיהוי סורקת את המידע הביומטרי (טביעת אצבע או פנים) ומעבירה אותו לשבב שעל התעודה כדי שזה יאשר שזה אכן בעל התעודה. אדם אחר לא יעבור את הזיהוי.</p>
+<p dir="rtl">האם יש צורך בטכנולוגיה כזו? האם היתרונות מצדיקים את העיכוב המסוכן והעלויות הנוספות? אולי לא, אבל לפחות לא מדובר בנזק בלתי הפיך לכל אזרחי המדינה.</p>
+<p dir="rtl">מאגר ביומטרי הוא גירסה מודרנית של סימון בקר או קעקוע של מספר על הזרוע:</p>
+<ul dir="rtl">
+<li dir="rtl">הוא מייתר את הצורך בתעודה או בשיתוף פעולה מצד האזרח לצורך זיהויו</li>
+<li dir="rtl">הדרך להגביל <strong>מי</strong> יוכל לבצע את הזיהוי (שוטר, סוחר, פושע, וכו&#8217;) היא על ידי שמירת סוד (הנתונים הביומטריים של אותו אזרח), שאם דלף &#8211; <strong>אי אפשר טכנית לבטל אותו</strong></li>
+</ul>
+<p dir="rtl">כלומר, לצורך פתרון בעיית הזיוף (הבעיה של הממשל), מחריף הממשל את בעיית הבילוש והצלבת המידע (הבעיה של האזרח) באופן בלתי הפיך (אצבע אי אפשר להחליף, ומידע שדלף אי אפשר להחזיר לבקבוק)</p>
+<h4 dir="rtl">בעיית הבילוש והצלבת המידע</h4>
+<p dir="rtl">כידוע, מאגרי מידע שונים דולפים בדרכים מפוקפקות יותר או פחות, ומשמשים בידי גורמים מסחריים, פליליים, וכו&#8217; לעקוב אחרי אנשים. מחוקרים פרטיים <a title="משרד פרסום גנב את זהותו של אדם - כולל פניו" href="http://www.ice.co.il/article/view/364231" target="_blank">ומפעילי &#8220;עוקץ ניגרי&#8221;</a> ועד לחברות פירסום וה-NSA, כל אוחד לוקח את כל המידע שהוא יכול להצליב (על פי כרטיס אשראי, תאריך לידה, פעילות ברשתות חברתיות, איכון סלולרי וכו&#8217;) ומנסה לשייך פיסות מידע זו לזו ברמות ודאות שונות.</p>
+<p dir="rtl">אזרחי ישראל פגיעים במיוחד בג&#8217;ונגל הזה, כי ישראל היא אולי המדינה הדמוקרטית היחידה בעולם בה כל אזרח מזוהה באמצעות מספר יחיד (ת.ז.) בבנק, במועדון לקוחות, במרפאה, וכו&#8217;.</p>
+<p dir="rtl">לבעיה הזאת יכול להיות פתרון פרימיטיבי ופשוט: לא לכתוב מספר על התעודה (בתוך השבב יש מספיק מספרים <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' />  ). הסופרמרקט רוצה לתת לך כרטיס מועדון? שייתן לך גם מספר (או שבב).</p>
+<p dir="rtl">מצד שני, המדינה יכולה לעזור לאזרחים ולכלכלה אם תפתח תעודה מזהה יחידה שתוכל לזהות את האזרח בפני גופים שונים (מסחריים וממשלתיים) בצורה שתמנע הצלבת מידע: הגורם המזהה (למשל קופה רושמת בחנות) מציג &#8220;רשיון גורם מזהה&#8221; (למשל של רשת הסופרמרקטים), ומקבל בתמורה אישור שזה אכן אזרח, וזה &#8220;מספר ת.ז.&#8221; שלו <strong>עבור הסופרמרקט</strong>. לאותו אזרח יש &#8220;מספרי ת.ז.&#8221; שונים במרפאה, בבנק, וכו&#8217;, וגם אם תהיה דליפת מידע מלאה או חלקית באירגונים האלה, עדיין לא יהיה פשוט לדעת מה המצב הרפואי של בעל חשבון בנק מסויים, האם הוא קונה מזון לא בריא בסופר, ואילו ספרים הוא קורא.</p>
+<h3 dir="rtl">מה נעשה בפועל?</h3>
+<p dir="rtl"><a href="http://no2bio.org/mevaker/" target="_blank">במשך כעשור</a> דחה הממשל את הטיפול בנושא, וכאשר הבעיה נעשתה קריטית, הוא התעקש להתנות את פתרון הבעיה בהקמת מאגר ביומטרי. כלומר, נוצרה הזדמנות להחליף מערכת מיושנת ומסוכנת במערכת מודרנית ובטוחה יותר, אך במקום זה מנסים להכריח אותנו לעבור למערכת מסוכנת הרבה יותר בטענה ש&#8221;אי אפשר לעצור את הקידמה&#8221;.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
