--- a/html/post-webmasters.html
+++ b/html/post-webmasters.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - יש לכם אתר?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -82,7 +81,7 @@
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לעשות<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -92,7 +91,7 @@
 
                           <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
 
-                          <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
+                          <li class="active"><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -145,30 +144,45 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>יש לכם אתר?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <h3 dir="rtl"><span style="font-size: 1.17em;">להתקין ווידג&#8217;ט</span></h3>
+<p dir="rtl">אם יש לכם בלוג או אתר, תוכלו להתקין ווידג&#8217;ט עדכונים דומה לזה שאתם רואים משמאל (רק בצבע אפור. הולך עם כל דבר <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' /> ).<br />
+הכניסו לתיבת טקסט חופשי את הקוד:</p>
+<pre dir="ltr">&lt;iframe frameborder="<a>0</a>" width="200" height="300" src="http://widget.no2bio.org/"&gt;&lt;/iframe&gt;</pre>
+<h3 dir="rtl" id="bloggers-for-privacy">לשלב את כותרות בלוגרים למען פרטיות</h3>
+<p dir="rtl">תוכלו גם להתקין ווידג&#8217;ט של &#8220;<a href="http://no2bio.org/bloggers/#bloggers-for-privacy" target="_blank">בלוגרים למען פרטיות</a>&#8221; (מאמרים רלוונטיים מתוך אתרים שתומכים בפרטיות).<br />
+הכניסו לתיבת טקסט חופשי את הקוד:</p>
+<pre dir="ltr">&lt;iframe frameborder="<a>0</a>" width="350" height="450" src="http://bloggers.no2bio.org/"&gt;&lt;/iframe&gt;</pre>
+<p dir="rtl">למתקדמים: אפשר במקום הווידג&#8217;ט להציג את <a title="We won't let google kill RSS ;)" href="http://bloggers.no2bio.org/rss.xml" target="_blank">פיד הרסס</a> של &#8220;בלוגרים למען פרטיות&#8221; (למשל בעזרת <a href="http://en.support.wordpress.com/widgets/rss-widget/" target="_blank">ווידג&#8217;ט הרסס הסטנדרטי</a> של וורדפרס).</p>
+<h3>לשים באנרים</h3>
+<p><img alt="Old 234x60 no animation" src="http://bloggers.no2bio.org/banners/no2bio234x60-a-v1.png" width="234" height="60" /></p>
+<pre dir="ltr">&lt;a target="_blank" title="No2Bio.org" href="http://no2bio.org"&gt;&lt;img border="0" width="234" height="60" src="http://bloggers.no2bio.org/banners/no2bio234x60-a-v1.png"&gt;&lt;/a&gt;</pre>
+<p><img alt="Old 234x60 no animation" src="http://bloggers.no2bio.org/banners/no2bio234x60-b-v1.png" width="234" height="60" /></p>
+<pre dir="ltr">&lt;a target="_blank" title="No2Bio.org" href="http://no2bio.org"&gt;&lt;img border="0" width="234" height="60" src="http://bloggers.no2bio.org/banners/no2bio234x60-b-v1.png"&gt;&lt;/a&gt;</pre>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
