--- a/html/post-what-can-be-done.html
+++ b/html/post-what-can-be-done.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - מה אנחנו יכולים לעשות?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -42,7 +41,7 @@
 
                           <li><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
 
-                          <li><a href="post-what-can-be-done.html">מה אנחנו יכולים לעשות?</a></li>
+                          <li class="active"><a href="post-what-can-be-done.html">מה אנחנו יכולים לעשות?</a></li>
 
                           <li><a href="post-forgery-statistics.html">מה היקף תופעת הזיוף כיום?</a></li>
 
@@ -145,30 +144,40 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>מה אנחנו יכולים לעשות?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">ביום שבו יתחיל רשמית הניסוי (הפיילוט) של המאגר הביומטרי, אפשר וכדאי יהיה לסרב להשתתף בו, משתי סיבות.</p>
+<ul dir="rtl">
+<li><strong>בטיחות אישית:</strong> הדרך היחידה למנוע מהנתונים שלך לדלוף, היא לא לאגור אותם מלכתחילה. ברגע שהנתונים שלכם יישמרו במאגר כלשהו, איש לא יוכל לערוב לאבטחה שלהם. גם בדברי ההסבר של משרד הפנים להצעת החוק, הודו שיש במאגר סכנה גדולה לפרטיות. למשרד הפנים יש היסטוריה מבישה בתחום של דליפות מידע. לאור ההתפתחויות בשנים האחרונות בתחום ההתקפות על מערכות ממוחשבות, אין סיבה להפקיד בידיו, או בידי כל גוף אחר, מידע כה רגיש. עצם ההחלטה לאגור מידע כזה מעידה על חוסר התמצאות גמור בתחום.</li>
+<li><strong>אחריות ציבורית:</strong> מאגר כזה הוא סכנה לביטחון המדינה ולשלום הציבור, משום שכל דליפה של מידע תוכל לשמש גורמים עוינים ועבריינים למגוון של פעילויות שיפגעו בנו. החזקת המאגר בסטנדרט אבטחה גבוה צפויה לעלות סכומי עתק, וגם אז לא תוכל למנוע דליפה &#8211; הוצאה מיותרת לחלוטין, על חשבון תחומים חשובים יותר. אי-הסכמה אזרחית רחבה להשתתף בניסוי – באמצעות סירוב לתת נתונים ביומטריים למדינה בעת חידוש והנפקה של ת.ז. או דרכונים, תוכל אולי להכשיל את הניסוי ולהחזיר את החוק לדיון מחודש בכנסת.</li>
+</ul>
+<h6 dir="rtl">סרבנות אקטיבית</h6>
+<p dir="rtl"><a href="http://www.ynet.co.il/articles/0,7340,L-4093369,00.html" target="_blank">לא נקבעו שום מדדים להצלחה או כשלון הפיילוט</a>, אבל שיעור היענות נמוך יוכל לעזור נגד נסיונות לטעון שהוא הצליח. הבעיה היא שהדרך היחידה &#8220;להיספר&#8221; בתור מי שסירב להשתתף בפיילוט היא לחדש תעודת זהות ולסרב לקבל תעודה ביומטרית.</p>
+<p dir="rtl">ביום שבו יתחיל הפיילוט, תוכלו לגשת למשרד הפנים ולבקש להחליף את תעודת הזהות לתעודה מהסוג הישן. בתור סיבה לבקשה, לכתוב: &#8220;חידשתי את התעודה כדי שיירשם שאני מסרב/ת להשתתף בפיילוט&#8221;.</p>
+<p dir="rtl">חידוש התעודה יהיה כרוך בתשלום, אבל דווקא בגלל זה יש למחאה כזו יותר משקל (אפשר לאמוד אותה בשקלים <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' /> ).</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
