--- a/html/post-whats-it-to-me.html
+++ b/html/post-whats-it-to-me.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - למה זה נוגע לי?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -38,7 +37,7 @@
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
-                          <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
+                          <li class="active"><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
                           <li><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
 
@@ -145,30 +144,41 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>למה זה נוגע לי?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl" style="text-align: right;">מסירת נתונים ביומטריים למאגר תפגע בפרטיות ובביטחון האישי של כל מי שיחליט להשתתף בניסוי. הנתונים יישמרו במאגר שגופים רבים מורשים לגשת אליו, ויאוחסנו בו פרטים אישיים שאינם ניתנים להחלפה. דמיינו שנתתם את סיסמת הגישה שלכם לחשבון הבנק שלכם לזרים, ועכשיו אתם מתחרטים על כך. כל עוד יש לכם גישה לחשבון, תוכלו להחליף את הסיסמה ולחסום את הגישה לזרים. להבדיל, אם הנתונים הביומטריים שלכם יתגלו לזרים, לא תוכלו להחליף אותם כדי להמשיך לשמור על פרטיותכם. גם אם ירצו להשתמש במאגר ביושר קפדני ובלי שחיתויות, לאלפי אנשים תהיה גישה חוקית אליו, ואין שום דרך להבטיח שפרטים מתוכו (או כולו) לא ידלפו.</p>
+<p dir="rtl" style="text-align: right;">משרד הפנים החל בהנפקת התעודות הביומטריות במסגרת ניסוי (פיילוט) שיארך שנתיים. החוק אינו מחייב אזרחים להשתתף בניסוי, אם כי סביר להניח שיהיו נסיונות להקל על אלה שישתתפו בו ולהקשות על אלה שלא. בכל מקרה, בתקופת הפיילוט <strong>ההחלטה היא בידיכם</strong>.</p>
+<p dir="rtl" style="text-align: right;">הסכמה להשתתף בפיילוט היא צעד בלתי הפיך. במסמך שעליו תחתמו אם תסכימו להשתתף (<a href="http://www.justice.gov.il/NR/rdonlyres/BA15FA5E-10B8-43B5-9444-92FC902363D4/29595/7025.pdf" target="_blank">עמוד 12</a>) כתוב:</p>
+<blockquote>
+<p dir="rtl">‫ידוע לי כי לאחר שנתתי את הסכמתי לנטילת אמצעים או נתונים ביומטריים והכללתם ‫במאגר, לא אוכל לחזור בי מהסכמתי זו, וכי עם תום תקופת המבחן המוגדרת בחוק ו<strong>עם‬ ‫החלת החוק על כלל התושבים גם בלא הסכמתם</strong>, יהיה משרד הפנים רשאי, בנסיבות‬ ‫מסוימות ובהתקיים התנאים לכך המפורטים בחוק, <strong>להעביר למשטרת ישראל, למשטרה‬ ‫הצבאית או לרשויות הביטחון</strong> מידע על סמך המאגר הביומטרי.‬</p>
+</blockquote>
+<p dir="rtl"><strong><a href="http://www.ynet.co.il/articles/0,7340,L-4093369,00.html" target="_blank">לא נקבעו שום מדדים להצלחת הפיילוט</a></strong>, כך שלא ברור מה צריך לקרות כדי שיוחלט שנכשל. אולי בגלל זה נאמר &#8220;<strong>עם‬ ‫החלת החוק&#8221;</strong> ולא &#8220;<strong>אם יוחל החוק</strong>&#8220;.</p>
+<p dir="rtl">אם אכן יוחלט בעוד שנתיים שהפיילוט הצליח, יחויבו כל אזרחי ישראל למסור למדינה דגימות ביומטריות. חלקם אולי יסרבו (ובצדק, כי המאגר לא יפסיק פתאום להיות מסוכן), אבל אפשר יהיה להשתמש בנתוניו הביומטריים של מי שהשתתף בפיילוט גם בלי הסכמתו, ולאפשר לגורמים שונים גישה אליהם.</p>
+<p dir="rtl">גם אם הפיילוט ייכשל בגלל דליפה מלאה או חלקית של המאגר, אתם תהיו שפני הניסוי שעל נתוניהם הביומטריים לא הצליחו לשמור. אין תסריט שבו מי שמשתתף בפיילוט יוצא מורווח.</p>
+<p dir="rtl">בתקופת הניסוי יש לנו זכות <a href="http://no2bio.org/what-can-be-done/">לסרב להשתתף בו באופן מוצהר</a>. בואו ננצל אותה, כל עוד אפשר.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
