--- a/html/post-you-can-influence.html
+++ b/html/post-you-can-influence.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - אתם יכולים להשפיע</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -82,11 +81,11 @@
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לעשות<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
-                          <li><a href="post-you-can-influence.html">אתם יכולים להשפיע</a></li>
+                          <li class="active"><a href="post-you-can-influence.html">אתם יכולים להשפיע</a></li>
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
@@ -145,30 +144,38 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>אתם יכולים להשפיע</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <h3 id="head-f98e4a1daf2327d840a3b3e1706873352d489dc3">לא להשתתף בפיילוט</h3>
+<p>ב-8/7/2013 התחיל לפעול מה שמכונה &#8220;הפיילוט&#8221; של המאגר הביומטרי. מעבר לסכנה שבהפקדת נתוניכם הביומטריים בידיים רשלניות כל כך, חשוב שתזהירו גם בני משפחה ומכרים. <strong>מספר האנשים ש<a href="http://no2bio.org/dont-give-the-finger/" target="_blank">יסרבו להשתתף</a> ישפיע על המשך המאבק</strong>. אל תחשבו שאם <a href="http://no2bio.org/the-problem" target="_blank">אתם כבר יודעים מה רע בשבילכם ועד כמה</a>, זה נכון גם לגבי הסובבים אתכם. נסו לדבר איתם, ותתפלאו כמה מהם לא רואים בעיה במאגר ביומטרי. בקרוב יתחילו לעשות הסברה לפיילוט בתקשורת, לכן חשוב עוד יותר להעביר את המסר: אל תתנו אצבע למאגר. אל תשתתפו בניסוי.</p>
+<h3>לפעול ברשתות חברתיות</h3>
+<p dir="rtl"><a href="http://no2http://no2bio.org.org/home/action.html#contact">בקצה השמאלי של התפריט העליון שלנו</a> תמצאו כפתורים שמאפשרים לכם להצטרף לקהילות מתנגדי המאגר הביומטרי ברשתות חברתיות כמו <a href="https://twitter.com/No2Bio" target="_blank">טוויטר</a>, <a href="http://youtube.com/No2BioIsrael" target="_blank">יו-טיוב</a> ו<a href="https://www.facebook.com/no2bio" target="_blank">פייסבוק</a>. אנא הצטרפו, הביעו את דעתכם, הפנו אותנו לקישורים מעניינים וכו&#8217;.</p>
+<h3>פעילויות נוספות</h3>
+<p dir="rtl">בצד ימין של הדף יש הפניות לדברים שאולי תוכלו ותרצו לעשות. אם יש לכם מדפסת, תוכלו להדפיס <a href="http://no2bio.org/flier/" target="_blank">פלאיירים</a>, <a href="http://no2bio.org/smbc-comics-nothing-to-hide/" target="_blank">קומיקס</a>, ועוד. אם יש לכם אתר, יש <a href="http://no2bio.org/webmasters/" target="_blank">דרכים לשלב אותו במאבק</a>. יש רעיונות נוספים ברשימה, והיא גם גדלה מדי פעם.</p>
+<p dir="rtl">אם יש לכם רעיון שעדיין לא חשבנו עליו &#8211; <a href="http://no2bio.org/contact/" target="_blank">ספרו לנו</a>.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
