--- a/html/post-bloggers.html
+++ b/html/post-bloggers.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - דעות ברשת</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -55,7 +54,7 @@
                           <li><a href="post-biometric-card.html">מהי תעודת זהות ביומטרית?</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לדעת<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -67,7 +66,7 @@
 
                           <li><a href="post-mevaker.html">דו”ח מבקר המדינה 2010</a></li>
 
-                          <li><a href="post-bloggers.html">דעות ברשת</a></li>
+                          <li class="active"><a href="post-bloggers.html">דעות ברשת</a></li>
 
                           <li><a href="post-bagatz.html">הבג”צ נגד המאגר הביומטרי</a></li>
 
@@ -145,30 +144,37 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>דעות ברשת</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <h6 dir="rtl">בלוגרים נגד חוק המאגר הביומטרי</h6>
+<p dir="rtl"><a href="http://www.shookygalili.com/?p=318" target="_blank">160 בלוגרים הצטרפו לרשימת המתנגדים למאגר הביומטרי</a>  שהקים העיתונאי והבלוגר <a href="http://www.shookygalili.com/" target="_blank">שוקי גלילי</a> בשנת 2009.</p>
+<h6 dir="rtl" id="bloggers-for-privacy">בלוגרים למען פרטיות</h6>
+<p dir="rtl"><a href="http://bloggers.no2bio.org" target="_blank">בלוגרים למען פרטיות</a> היא <a href="https://en.wikipedia.org/wiki/News_aggregator" target="_blank">מערכת</a> שמציגה מאמרים רלוונטיים מתוך אתרים שתומכים בפרטיות. אם יש לכם קורא רסס &#8211; תוכלו להתעדכן מה<a title="We won't let google kill RSS ;)" href="http://bloggers.no2bio.org/rss.xml" target="_blank">פיד</a> שלה, ואם יש לכם אתר &#8211; תוכלו <a href="http://no2bio.org/webmasters/#bloggers-for-privacy" target="_blank">לשים שם ווידג&#8217;ט כזה</a>.</p>
+<p><iframe src="http://bloggers.no2bio.org" frameborder="0" height="450" width="450"></iframe></p>
+<p>&nbsp;</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
