--- a/html/post-dani-dolev.html
+++ b/html/post-dani-dolev.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - פרופ’ דני דולב</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,7 +24,7 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -107,7 +106,7 @@
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">מחאת האקדמיה<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -119,7 +118,7 @@
 
                           <li><a href="post-jerome-bordon.html">פרופ’ ג’רום בורדון</a></li>
 
-                          <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
+                          <li class="active"><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
@@ -145,30 +144,45 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>פרופ’ דני דולב</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">פרופ&#8217; דני דולב, מחותמי <a href="http://no2bio.org/letters-to-knesset/">מכתב המדענים</a>, הוא חבר סגל ב<a href="http://www.cs.huji.ac.il/site/?lang=he" target="_blank">ביה&#8221;ס להנדסה ולמדעי המחשב</a> באוניברסיטה העברית ומשמש ראש הרשות למחשוב, תקשורת ומידע באוניברסיטה העברית. דולב חבר גם בוועד המנהל של מרכז החישוב הבין-אוניברסיטאי (מחב&#8221;א), <a href="http://www.hayadan.org.il/dany-dolev-elected-to-the-european-reaserch-commission-1102116/" target="_blank">והישראלי הראשון שנבחר למועצה המדעית של האיחוד האירופי</a><a href="http://www.hayadan.org.il/dany-dolev-elected-to-the-european-reaserch-commission-1102116/" target="_blank">.</a></p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/7uEgrwYJXFY?rel=0&amp;cc_load_policy=1&amp;cc_lang_pref=he" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl">מתוך הווידאו:</p>
+<p dir="rtl">&#8220;אם אתבקש על ידי משרד הפנים לתת את הנתונים הביומטריים שלי, אתנגד ככל שאוכל&#8230; מאגר ביומטרי הוא מאגר דיגיטלי. קל מאוד להעתיק אותו החוצה&#8230; [אם] קובץ מהמחשב שלי עם הסיסמה ידלוף &#8211; זה גורם לי נזק, ואחרי כמה זמן אני יכול לשקם את הנזק שנוצר. אני אשלם קנסות אולי פה ושם, אבטל העברות, אחליף סיסמאות, אוכל לשקם אותו. כשהמאגר הביומטרי ידלוף &#8211; אין דרך יותר לשקם את זה&#8230; אני יכול להחליף את הסיסמה שלי, אני לא יכול להחליף את הפנים שלי, את טביעות האצבעות&#8230;&#8221;</p>
+<p dir="rtl">&#8220;חברי הכנסת האמינו ללוחשים על אוזנם&#8230; בלי לנסות להבין את הסכנה מצד אחד, ואת היכולות הטכנולוגיות האחרות. הנסיון האקדמי מוכיח שהבטחות לחוד ומציאות לחוד&#8230; אנחנו מבינים שיש גבולות ליכולת שלנו להגן או להיצמד להבטחות שמישהו מבטיח לנו, שהכל יהיה מוגן&#8230; אין מאגר מידע שלא עלול לדלוף&#8230;&#8221;</p>
+<p dir="rtl">&#8220;אם נתמקד במטרה של מקימי המאגר הביומטרי, יש דרכים טכנולוגיות יותר מתוחכמות, טיפה יותר מורכבות לרשויות שרוצות להשתמש בזה,  אבל לא בלתי אפשריות, שיכולות להשיג תוצאות דומות&#8221;.</p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/xxs3SnzXUGs?rel=0&amp;cc_load_policy=1&amp;cc_lang_pref=he" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl">מתוך הווידאו:</p>
+<p dir="rtl">&#8220;העובדה שיש מאגר יחיד שמזהה את תושבי מדינת ישראל אחד לאחד זו סכנה שלא תתואר&#8230; אנשי האקדמיה יודעים שיש גבולות ליכולת שלנו, ואחת הסיבות להתגייסות כאן זו העובדה שאנחנו צריכים תמיד לחשוב מה יקרה בתסריט הרע ביותר. גם אם הסיכוי שהוא יקרה הוא קטן, הנזק, אם אני מכמת את כמות הנזק בסיכוי, אני עלול להגיע לאסון גדול&#8230;&#8221;</p>
+<p dir="rtl">&#8220;מערכת אוטומטית שעוקבת אחריך עלולה להוציא אינספור אירועים שאתה לא תזכור&#8230; אתה עומד בתחקיר בבית דין והצד השני מנסה לשבור אותך. הדרך לשבור אותך זה לפגוע באמינות שלך. הוא יכול להציג בפניך אינספור מקרים, מקומות שהיית בהם, שאתה לא זוכר שהיית בהם, או אתה לא זוכר למה היית בהם, והוא יתחיל לשאול אותך: &#8220;ביום זה וזה שעה זו וזו היית בדיזנגוף פינת פרישמן, מה עשית שם? שבועיים לפני כן היית ברחובות בכתובת זו וזו מה עשית שם?&#8221;. אתה לא תזכור את הכל. זו הדרך לשבור אדם&#8230;&#8221;</p>
+<p dir="rtl">&#8220;&#8230;המעביד שלך, אשתך, בני המשפחה שלך, חברות ביטוח, יוכלו לעקוב אחריך. ברגע שנהיה מודעים לכך, אני לא יודע מה זה יעשה לסוציולוגיה שלנו. ואני לא רוצה להימצא שם. אנחנו אנשים חופשיים ואני רוצה להישאר אדם חופשי. אני לא צריך לדעת שהאח הגדול כל הזמן יודע יותר טוב ממני איפה אני ומה אני עושה&#8221;.</p>
+<style style="font-size: large;" type="text/css"><!--
+P { margin-bottom: 0.08in; }A:link {  }
+--></style>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
