--- a/html/post-database-uses.html
+++ b/html/post-database-uses.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - למה ישמש המאגר?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -40,7 +39,7 @@
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
-                          <li><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
+                          <li class="active"><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
 
                           <li><a href="post-what-can-be-done.html">מה אנחנו יכולים לעשות?</a></li>
 
@@ -145,30 +144,32 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>למה ישמש המאגר?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p>במקור, המאגר יועד למניעת הרכשה כפולה בלבד, וכדי למנוע שימוש לרעה וזיהוי אנשים ללא תעודה, הוצעו פתרונות טכניים שנדחו על ידי הממשלה בגלל התנגדות המשטרה, שרוצה אפשרות לזהות אנשים גם ללא תעודה. לפי התכנון, תוכל המשטרה להוציא צו בבית משפט ולהשתמש במאגר בכל חקירה, כולל חקירות של עבירות טריוויאליות, שמוגדרות בחוק כ&#8221;עוון&#8221;. לדוגמה, &#8220;הפרעה לסדר הציבורי&#8221; היא עוון, וכך גם טיול עם כלב שאינו קשור.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
