--- a/html/post-foreigners.html
+++ b/html/post-foreigners.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,14 +24,14 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
                           <li><a href="post-the-problem.html">מה הבעיה?</a></li>
 
-                          <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
+                          <li class="active"><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
@@ -145,30 +144,42 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">מדינות רבות &#8211; וארה&#8221;ב ביניהן &#8211; מחזיקות מאגר ביומטרי של זרים שמבקרים בהן, מיעוטים, ושאר מיני “אזרחים מדרגה שניה”. הדבר מתאפשר מהסיבות הבאות:</p>
+<ol>
+<li dir="rtl">אזרח יכול לבחור אם לבקר במדינה אחרת או לא, אבל אי אפשר לכפות עליו למסור את את נתוניו הביומטריים.</li>
+<li dir="rtl">לא מדובר באזרחי המדינה, לכן אין מי שיילחם על זכויותיהם (אלא אם גוף בינלאומי כמו האו”ם או האיחוד האירופי יחליט לפעול בנושא).</li>
+</ol>
+<p dir="rtl">גם דליפה של מאגר כזה תסכן ישראלים שמסרו את נתוניהם, אבל מדובר בסיכונים קטנים בהרבה יחסית לדליפת מאגר כמו זה שמשרד הפנים מנסים להקים:</p>
+<ol>
+<li dir="rtl">לארה&#8221;ב יהיה מאגר של <strong>חלק קטן</strong> מאזרחי ישראל (מרכיב חשוב בניתוח פוטנציאל הנזק הגלום בדליפת מאגר הוא החלק היחסי מתוך האוכלוסיה שבאותו מאגר מכסה).</li>
+<li dir="rtl">הוא מזהה ישראלים לפי מספר דרכון (שמתחלף כשמחדשים את הדרכון), בניגוד למספר ת.ז. שמאפשר לחפש אותנו במאגרים של כמעט כל העסקים והמוסדות הישראלים שאנחנו נמצאים איתם במגע (בעיה שתיעוד חכם יכול וצריך למנוע, אך מאגר ביומטרי רק <a href="http://no2bio.org/the-problem/" target="_blank">מחריף</a> אותה).</li>
+</ol>
+<p dir="rtl">
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
