--- a/html/post-what-are-the-dangers.html
+++ b/html/post-what-are-the-dangers.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - מה הן הסכנות הטמונות באגירת מידע?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -48,7 +47,7 @@
 
                           <li><a href="post-other-countries.html">מה המצב במדינות אחרות?</a></li>
 
-                          <li><a href="post-what-are-the-dangers.html">מה הן הסכנות הטמונות באגירת מידע?</a></li>
+                          <li class="active"><a href="post-what-are-the-dangers.html">מה הן הסכנות הטמונות באגירת מידע?</a></li>
 
                           <li><a href="post-what-is-bio-db.html">מהו מאגר ביומטרי?</a></li>
 
@@ -145,30 +144,32 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>מה הן הסכנות הטמונות באגירת מידע?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p>תעודת זהות ביומטרית יכולה רק לקשר בין התעודה לפנים או לטביעות אצבע של אדם בודד. מאגר נתונים ביומטריים של אוכלוסיה גדולה מאפשר את הכיוון ההפוך: לקשר בין פנים או טביעות אצבע לבין נתונים אחרים שנאגרו על אזרח. אם, למשל,  אפשר לצלם אדם, להשוות את התמונה למאגר וכך לגלות את מספר הזהות שלו, אפשר גם לדעת את כל הפרטים שמרשם האוכלוסין (<a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">שכבר דלף</a>) יכול לספק, כמו כתובת, מצב משפחתי ועוד. אפשר היה לפתור את הבעיות שנוצרו בעקבות דליפת מרשם האוכלוסין לו היו מחליפים את מספרי תעודות הזהות של כל התושבים, ובכך הופכים את המידע שדלף ללא רלוונטי, אבל מאגר ביומטרי יחליף את המספר הזה בנתונים שאי אפשר להחליף אותם, כמו הפנים והאצבעות שלנו, לכן דליפה שלו אינה ניתנת לתיקון.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
