--- a/html/post-will-it-be-protected.html
+++ b/html/post-will-it-be-protected.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -25,8 +24,8 @@
           <a class="navbar-brand" href=".">M.No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -34,7 +33,7 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
-                          <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
+                          <li class="active"><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
@@ -145,30 +144,32 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i8irTstevAzkWtbZ7Krdz7W" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
-        </p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p>בניגוד לתעודת זהות ביומטרית, שכאמור, מגינה על הנתונים הביומטריים שלנו, המאגר הביומטרי הוא כמו כל מאגר מידע אחר ואינו חסין מפני הדלפות ופריצות. ככל שהמידע רגיש יותר, כמו במקרה של המאגר הביומטרי, גדלה האטרקטיביות שלו. מידע יכול לדלוף בכמה דרכים: האנשים שמופקדים על שמירתו ועל השימוש בו <a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">יכולים להדליף אותו</a>, לפעמים ניתן להאזין לתקשורת בין גורמים שונים במערכת (למשל בין המכשיר שמזהה אותך לבין המאגר), או לפרוץ למאגר עצמו. בכל מקרה, את המידע שדלף ומועבר בין גורמים שונים או ניתן להורדה ברשת, לא ניתן להשיב. לאחרונה <a href="http://www.haaretz.co.il/news/law/1.1529808" target="_blank">נחשפו האחראים</a> להדלפת מרשם האוכלוסין. החשיפה מאפשרת <strong>להעניש</strong> אותם, אך אין לה <strong>שום משמעות מעשית</strong> כי הנתונים שלנו עדיין נגישים לכל מי שרוצה להשתמש בהם לרעה.</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
